[project]
name = "hachitool"
dynamic = ["version"]
description = "Utilities for working with Python scripts in GitHub Actions"
readme = "README.md"
authors = [
    { name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "multimethod>=1.12",
    "pydantic>=2.10.3",
]

[tool.pdm.version]
source = "scm"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
